objects/UNITY_Push_Notification__c.object
<CustomObject>
    <description>Object to hold notifications and alerts to be displayed on Service Console</description>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message on the notification. (Optional if type is not &quot;Alert&quot;).</description>
        <inlineHelpText>The message on the notification. (Optional if type is not &quot;Alert&quot;).</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>The id for the record the notification is about</description>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <description>The Name of the record this notification is about</description>
        <label>Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The notification subject</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <description>The subscriber to get the notification. Must be a user id or a queue/group id.</description>
        <externalId>true</externalId>
        <inlineHelpText>The subscribers to this notifications. Must be a user id or a queue/group id.</inlineHelpText>
        <label>Subscriber</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of notification</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Case Escalation</fullName>
                </value>
                <value>
                    <fullName>Emergency Case</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Tech Check-Out</fullName>
                </value>
                <value>
                    <fullName>Tech Onsite</fullName>
                </value>
                <value>
                    <fullName>Work Order Escalation</fullName>
                </value>
                <value>
                    <fullName>Work Order Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Push Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Record_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Message__c</columns>
        <columns>Subscriber__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>